--- a/static/css/global.css
+++ b/static/css/global.css
@@ -13,7 +13,7 @@
 }
 
 button {
-    color: white;
+    color: #2f3b45;
     border: none;
     padding: 3px 15px;
     margin-top: 20px;
@@ -56,7 +56,7 @@ button {
 
 .header-nav a {
     text-decoration: none;
-    color: var(--color-text)
+    color: var(--color-text);
 }
 
 .header-contact {
@@ -75,9 +75,10 @@ button {
 .main-all-airs {
     flex: 1;
     display: flex;
+    justify-content: center;
     list-style: none;
     flex-wrap: wrap;
-    gap: 30px
+    gap: 30px;
     align-items: center;
 }
 
@@ -93,7 +94,7 @@ button {
 }
 .main-all-airs{
     display: flex;
-    gap: 30px
+    gap: 30px;
 }
 
 .main-all-airs img {
@@ -115,7 +116,7 @@ button {
     font-family: 'Open Sans';
     font-weight: 600;
     font-size: 25px;
-    max-width: 300px
+    max-width: 300px;
 }
 
 .main-all-airs span {
