--- a/templates/details.html
+++ b/templates/details.html
@@ -11,7 +11,9 @@
             <ul class="header-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/catalog/">Catalog</a></li>
-                <li><a href="/about_us">About us</a></li>
+                <li><a href="/about_us/">About us</a></li>
+                <li><a href="{% url 'login' %}">Log in</a></li>
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>
             </ul>
             <div class="header-contact">
                 <a href="#">
